[package]
name = "allow_pin"
version = "0.1.0"
edition = "2024"

[dependencies]
zerocopy = "0.8.27"

[profile.release]
codegen-units = 1
lto = true

[profile.opt-0]
inherits = "release"
opt-level = 0

[profile.opt-1]
inherits = "release"
opt-level = 1

[profile.opt-2]
inherits = "release"
opt-level = 2

[profile.opt-3]
inherits = "release"
opt-level = 3

[profile.opt-s]
inherits = "release"
opt-level = "s"

[profile.opt-z]
inherits = "release"
opt-level = "z"
